--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -1,7 +1,7 @@
 numpy==1.15.0
-scipy==1.1.0
 Pillow==5.2.0
 mss==3.2.1
 pynput==1.4
-six==1.11.0
 opencv-python==3.4.2.17
+psutil==5.4.7
+myModule==1.0.0
